# CppEnhanced

./: .gitignore  CMakeLists.txt  CppEnhanced.sln  README.md  build.ps1  clean.ps1  library.h
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: cmake.yml  msbuild.yml
include/: cppfecs.hpp  datetime.h  datetime.hpp  libplatfrom.h
include/classes/: datetime.cpp  datetime.h
public/: stdc++.h
source/: datetime.cpp
tests/: CMakeLists.txt  test_datetime.cpp
